# voxagent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  README.md  minimum_client.py  pyproject.toml
.github/workflows/: voxagent-ci.yml  voxagent-publish.yml
agent/: core.py
code/: __init__.py
examples/: 01_openai_streaming.py  02_anthropic_tools.py  03_ollama_local.py  04_mcp_integration.py  05_multi_provider.py  06_home_orchestrator.py  README.md
home_config/agents/: greek_persona.md
home_config/rules/: core_protocol.md  frugality.md  transparency.md
mcp/: manager.py  tool.py
project/docs/: integration_mechanisms.md  strategy_implementation_plan.md  strategy_plan_review.md
providers/: augment.py  auth.py  cli_base.py  codex.py  failover.py  ollama.py
session/: compaction.py  storage.py
src/voxagent/: __init__.py  _version.py
src/voxagent/agent/: __init__.py  abort.py  core.py
src/voxagent/code/: __init__.py  agent.py  query.py  sandbox.py  tool_proxy.py  virtual_fs.py
src/voxagent/config/: __init__.py  loader.py
src/voxagent/formatting/: __init__.py  base.py  markdown.py  plain.py  registry.py  xml.py
src/voxagent/mcp/: __init__.py  tool.py
src/voxagent/memory/: lancedb.py  sync.py
src/voxagent/providers/: __init__.py  anthropic.py  antigravity.py  base.py  chatgpt.py  claudecode.py  google.py  groq.py  ollama.py  openai.py  registry.py
src/voxagent/security/: __init__.py  events.py  filter.py  registry.py
src/voxagent/session/: __init__.py  lock.py  model.py
src/voxagent/strategies/: __init__.py  base.py  default.py  home.py  planning.py  react.py  reflection.py  retry.py
src/voxagent/streaming/: __init__.py  events.py
src/voxagent/subagent/: __init__.py  context.py  definition.py
src/voxagent/tools/: context.py  decorator.py  definition.py  executor.py  home_assistant.py  home_setup.py  meta.py  registry.py
src/voxagent/types/: messages.py  run.py
streaming/: emitter.py  events.py
tests/test_code/: __init__.py  test_code_mode.py  test_query.py  test_sandbox.py  test_tool_proxy.py  test_virtual_fs.py
tests/test_formatting/: __init__.py  test_base.py  test_formatters.py  test_registry.py
tests/test_strategies/: __init__.py  test_base.py  test_default.py  test_planning.py  test_react.py  test_reflection.py  test_retry.py
tools/: __init__.py  policy.py
types/: __init__.py
